--- a/profil.html
+++ b/profil.html
@@ -260,32 +260,32 @@
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 Lomba Seni Tari Kreasi Tingkat Kota</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 Lomba Seni Tari Kreasi Tingkat Kota</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara Umum Pentas Seni Anak Se-Provinsi</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2022</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara Umum Pentas Seni Anak Se-Provinsi</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2022</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Best School dalam Education Fair</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Best School dalam Education Fair</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Sekolah Sehat Tingkat Kota</h4>
-                                        <p class="text-sm text-gray-600">Penghargaan atas kesehatan dan kebersihan</p>
+                                        <h4 class="font-semibold text-sm mb-1">Sekolah Sehat Tingkat Kota</h4>
+                                        <p class="text-xs text-gray-600">Penghargaan atas kesehatan dan kebersihan</p>
                                     </div>
                                 </div>
                             </div>
@@ -367,32 +367,32 @@
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 Olimpiade Sains Nasional (OSN) IPA Tingkat Provinsi</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 Olimpiade Sains Nasional (OSN) IPA Tingkat Provinsi</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 2 Lomba Tahfidz Al-Qur'an Tingkat Nasional</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2022</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 2 Lomba Tahfidz Al-Qur'an Tingkat Nasional</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2022</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 Robotika Tingkat Kota</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 Robotika Tingkat Kota</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Sekolah Adiwiyata Nasional</h4>
-                                        <p class="text-sm text-gray-600">Penghargaan atas kepedulian lingkungan</p>
+                                        <h4 class="font-semibold text-sm mb-1">Sekolah Adiwiyata Nasional</h4>
+                                        <p class="text-xs text-gray-600">Penghargaan atas kepedulian lingkungan</p>
                                     </div>
                                 </div>
                             </div>
@@ -478,32 +478,32 @@
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 Olimpiade Sains Nasional (OSN) Matematika Tingkat Provinsi</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 Olimpiade Sains Nasional (OSN) Matematika Tingkat Provinsi</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Peringkat 3 Terbaik dalam Lomba Debat Bahasa Inggris Se-Sulawesi Selatan</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2022</p>
+                                        <h4 class="font-semibold text-sm mb-1">Peringkat 3 Terbaik dalam Lomba Debat Bahasa Inggris Se-Sulawesi Selatan</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2022</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Medali Emas Kejuaraan Pencak Silat Antar Pelajar</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Medali Emas Kejuaraan Pencak Silat Antar Pelajar</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Sekolah Adiwiyata Nasional</h4>
-                                        <p class="text-sm text-gray-600">Penghargaan atas kepedulian lingkungan</p>
+                                        <h4 class="font-semibold text-sm mb-1">Sekolah Adiwiyata Nasional</h4>
+                                        <p class="text-xs text-gray-600">Penghargaan atas kepedulian lingkungan</p>
                                     </div>
                                 </div>
                             </div>
@@ -520,7 +520,7 @@
                             <div class="mb-12">
                                 <div class="flex items-start space-x-4">
                                     <div class="flex-shrink-0">
-                                        <div class="w-14 h-14 bg-gray-100 rounded-full flex items-center justify-center">
+                                        <div class="w-14 h-14 bg- -100 rounded-full flex items-center justify-center">
                                             <i class="fas fa-bullseye text-[24px] text-gray-600"></i>
                                         </div>
                                     </div>
@@ -605,32 +605,32 @@
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 LKS (Lomba Kompetensi Siswa) Tingkat Provinsi</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 LKS (Lomba Kompetensi Siswa) Tingkat Provinsi</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Best Innovation dalam Science Fair tingkat Nasional</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2022</p>
+                                        <h4 class="font-semibold text-sm mb-1">Best Innovation dalam Science Fair tingkat Nasional</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2022</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 2 Web Development Competition</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 2 Web Development Competition</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Sertifikasi Industri Teknologi Informasi</h4>
-                                        <p class="text-sm text-gray-600">Pengakuan kompetensi siswa</p>
+                                        <h4 class="font-semibold text-sm mb-1">Sertifikasi Industri Teknologi Informasi</h4>
+                                        <p class="text-xs text-gray-600">Pengakuan kompetensi siswa</p>
                                     </div>
                                 </div>
                             </div>
