--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <img src="img/iqis2.jpg" alt="Pengumuman Libur" class="w-full h-60 object-cover rounded-lg">
         
         <div class="flex flex-col sm:flex-row gap-4 mt-4">
-          <a href="https://drive.google.com/file/d/1aW4Hxj-iBzGF634k-AFOJQr-OPLNzUV1/view" target="_blank" class="flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-100 hover:border-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">Lihat Brosur</a>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQj02imN70ePKLFWvLrPZQiC2GJ2Vi5dZW7FV8o2Hyj549Qg/viewform" target="_blank" class="flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">Daftar Sekarang</a>
+          <a href="https://drive.google.com/file/d/1aW4Hxj-iBzGF634k-AFOJQr-OPLNzUV1/view" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-100 hover:border-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">Lihat Brosur</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQj02imN70ePKLFWvLrPZQiC2GJ2Vi5dZW7FV8o2Hyj549Qg/viewform" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">Daftar Sekarang</a>
         </div>
       </div>
 
@@ -59,8 +59,8 @@
         <img src="img/iqis3.jpg" alt="Pengumuman Libur" class="w-full h-60 object-cover rounded-lg">
         
         <div class="flex flex-col sm:flex-row gap-4 mt-4">
-          <a href="#link-brosur-1" target="_blank" class="flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-100 hover:border-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">Lihat Brosur</a>
-          <a href="#link-daftar-1" target="_blank" class="flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">Daftar Sekarang</a>
+          <a href="#link-brosur-1" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-100 hover:border-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">Lihat Brosur</a>
+          <a href="#link-daftar-1" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">Daftar Sekarang</a>
         </div>
       </div>
 
@@ -405,7 +405,7 @@
           </a>
 
           <!-- Informasi -->
-          <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+          <a href="informasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
             <i class="fas fa-clipboard-list text-[18px]"></i>
             <span class="mt-2">Informasi</span>
           </a>
