--- a/informasi.html
+++ b/informasi.html
@@ -275,7 +275,7 @@
                 </a>
 
                 <!-- Informasi -->
-                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                <a href="informasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-clipboard-list text-[18px]"></i>
                     <span class="mt-2">Informasi</span>
                 </a>
