--- a/lainnya/tambahan.html
+++ b/lainnya/tambahan.html
@@ -64,3 +64,58 @@
           </div>
         </article>
       </div> -->
+
+      
+    <!-- Keunggulan -->
+      <!-- <section class="max-w-5xl mx-auto px-4 py-12 grid grid-cols-1 md:grid-cols-2 gap-4 bg-[#ebfbe8]">
+        <div class="max-w-md mx-auto md:mx-0">
+          <p class="text-[#71c55d] text-xs font-semibold uppercase mb-1">
+          FITUR APLIKASI BERAMALBERSAMA
+          </p>
+          <h3 class="text-[#71c55d] text-xl font-medium leading-tight mb-1">
+          Revolusi Berdonasi Online
+          </h3>
+          <p class="text-[#71c55d] text-sm leading-tight mb-6">
+          dapatkan pengalaman baru berbagi via beramalbersama
+          </p>
+          <button class="bg-[#71c55d] text-white font-semibold text-sm rounded-md px-6 py-2 hover:bg-[#e65a33] transition" type="button">
+          Coba Sekarang
+          </button>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-2">
+          <div class="bg-[#71c55d] rounded-md p-4 text-white flex flex-col justify-between">
+            <div class="mb-3">
+              <i class="fas fa-calculator text-3xl mb-3">
+              </i>
+              <h4 class="font-semibold text-lg mb-1">
+              SHALIH
+              </h4>
+            </div>
+          </div>
+
+          <div class="bg-[#71c55d] rounded-md p-4 text-white flex flex-col justify-between">
+            <div class="mb-3">
+              <i class="fas fa-envelope-open-text text-3xl mb-3">
+              </i>
+              <h4 class="font-semibold text-lg mb-1">
+              HAFIZH
+              </h4>
+            </div>
+          </div>
+
+          <div class="bg-[#71c55d] rounded-md p-4 text-white flex flex-col justify-between md:col-span-2">
+            <div class="mb-3">
+              <i class="fas fa-mobile-alt text-3xl mb-3">
+              </i>
+              <h4 class="font-semibold text-lg mb-1">
+              TERAMPIL
+              </h4>
+            </div>
+          </div>
+        </div>
+        </section> -->
+
+        
+          <!-- <button aria-label="PPDB" class="text-white text-xl ml-4">
+            <i class="fas fa-bars text-[24px]"> </i>
+          </button> -->
