--- a/program.html
+++ b/program.html
@@ -4,6 +4,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>IQIS Makassar | Artikel</title>
         <script src="https://cdn.tailwindcss.com"></script>
+                <script src="js/tab.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
         <style>
@@ -56,7 +57,7 @@
 
     <!-- Konten untuk setiap tab -->
     <!-- KBIT -->
-    <div id="kbit" class="tab-content hidden">
+    <div id="kbit" class="tab-content">
         <!-- Gabungan Ekstrakurikuler & Program Unggulan KBIT -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8">
             <!-- Section Ekstrakurikuler KBIT -->
@@ -65,8 +66,27 @@
                     <h2 class="text-2xl font-bold text-gray-800"><span class="bg-gradient-to-r from-green-600 to-green-800 bg-clip-text text-transparent">Ekstrakurikuler</span></h2>
                     <p class="text-gray-600 mt-2">Kembangkan bakat dan minat anak Anda</p>
                 </div>
-                <div class="overflow-x-auto scrollbar-hide">
-                    <div class="flex space-x-4" style="width: max-content;">
+                
+                <!-- Carousel Container -->
+                <div class="overflow-hidden">
+                    <div id="carouselTrack" class="flex space-x-4 transition-transform duration-500 ease-in-out">
+                        <div class="flex-shrink-0 w-32 bg-gray-50 rounded-lg shadow-md p-4 flex flex-col items-center justify-center hover:shadow-lg transition-shadow duration-300">
+                            <i class="fas fa-music text-3xl text-green-600 mb-3"></i>
+                            <p class="text-xs font-semibold text-gray-700 text-center">Hadroh</p>
+                        </div>
+                        <div class="flex-shrink-0 w-32 bg-gray-50 rounded-lg shadow-md p-4 flex flex-col items-center justify-center hover:shadow-lg transition-shadow duration-300">
+                            <i class="fas fa-palette text-3xl text-green-600 mb-3"></i>
+                            <p class="text-xs font-semibold text-gray-700 text-center">Seni & Kriya</p>
+                        </div>
+                        <div class="flex-shrink-0 w-32 bg-gray-50 rounded-lg shadow-md p-4 flex flex-col items-center justify-center hover:shadow-lg transition-shadow duration-300">
+                            <i class="fas fa-futbol text-3xl text-green-600 mb-3"></i>
+                            <p class="text-xs font-semibold text-gray-700 text-center">Futsal</p>
+                        </div>
+                        <div class="flex-shrink-0 w-32 bg-gray-50 rounded-lg shadow-md p-4 flex flex-col items-center justify-center hover:shadow-lg transition-shadow duration-300">
+                            <i class="fas fa-language text-3xl text-green-600 mb-3"></i>
+                            <p class="text-xs font-semibold text-gray-700 text-center">English Club</p>
+                        </div>
+                        <!-- Duplicate items for infinite loop effect -->
                         <div class="flex-shrink-0 w-32 bg-gray-50 rounded-lg shadow-md p-4 flex flex-col items-center justify-center hover:shadow-lg transition-shadow duration-300">
                             <i class="fas fa-music text-3xl text-green-600 mb-3"></i>
                             <p class="text-xs font-semibold text-gray-700 text-center">Hadroh</p>
@@ -94,13 +114,13 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070" alt="Tahfidz Quran" class="w-full h-48 object-cover">
+                        <img src="img/buroq.jpeg" alt="Tahfidz Quran" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Tahfidz Quran Juz 30</h3>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?q=80&w=2070" alt="Sains Cerdas" class="w-full h-48 object-cover">
+                        <img src="img/iqis2.jpg" alt="Sains Cerdas" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Sains Cerdas</h3>
                         </div>
@@ -149,13 +169,13 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070" alt="Tahfidz Quran" class="w-full h-48 object-cover">
+                        <img src="img/iqis3.jpg" alt="Sains Cerdas" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
-                            <h3 class="text-white font-semibold text-lg">Tahfidz Quran Juz 30</h3>
+                            <h3 class="text-white font-semibold text-lg">Sains Cerdas</h3>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?q=80&w=2070" alt="Sains Cerdas" class="w-full h-48 object-cover">
+                        <img src="img/iqis4.jpg" alt="Sains Cerdas" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Sains Cerdas</h3>
                         </div>
@@ -165,7 +185,7 @@
         </div>
     </div>
 
-    <div id="sdit" class="tab-content">
+    <div id="sdit" class="tab-content hidden">
         <!-- Gabungan Ekstrakurikuler & Program Unggulan SDIT -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8">
             <!-- Section Ekstrakurikuler SDIT -->
@@ -211,13 +231,13 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1595435934249-5df7ed86e1c0?q=80&w=2070" alt="Pengenalan Al-Quran" class="w-full h-48 object-cover">
+                        <img src="img/iqis5.jpg" alt="Pengenalan Al-Quran" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Pengenalan Al-Quran</h3>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad?q=80&w=2070" alt="Bermain & Belajar" class="w-full h-48 object-cover">
+                        <img src="img/iqis6.jpg" alt="Bermain & Belajar" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Bermain & Belajar</h3>
                         </div>
@@ -266,13 +286,13 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070" alt="Tahfidz Quran" class="w-full h-48 object-cover">
+                        <img src="img/iqis.jpeg" alt="Tahfidz Quran" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Tahfidz Quran Juz 30</h3>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?q=80&w=2070" alt="Sains Cerdas" class="w-full h-48 object-cover">
+                        <img src="img/iqis2.jpg" alt="Sains Cerdas" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Sains Cerdas</h3>
                         </div>
@@ -283,7 +303,7 @@
     </div>
 
     <!-- SMKIT -->
-    <div id="smpit" class="tab-content hidden">
+    <div id="smkit" class="tab-content hidden">
         <!-- Gabungan Ekstrakurikuler & Program Unggulan SMKIT -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8">
             <!-- Section Ekstrakurikuler SMKIT -->
@@ -321,7 +341,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="relative rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070" alt="Tahfidz Quran" class="w-full h-48 object-cover">
+                        <img src="img/iqis4.jpg" alt="Tahfidz Quran" class="w-full h-48 object-cover">
                         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-4">
                             <h3 class="text-white font-semibold text-lg">Tahfidz Quran Juz 30</h3>
                         </div>
@@ -393,7 +413,7 @@
                 </a>
 
                 <!-- Informasi -->
-                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                <a href="informasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-clipboard-list text-[18px]"></i>
                     <span class="mt-2">Informasi</span>
                 </a>
@@ -413,29 +433,6 @@
             </div>
             <!-- Penutup NavBar -->
             
-<script>
-    // --- FUNGSI UNTUK LOGIKA TAB ---
-    function switchTab(jenjang) {
-        // Sembunyikan semua konten tab
-        document.querySelectorAll('.tab-content').forEach(content => {
-            content.classList.add('hidden');
-        });
 
-        // Tampilkan konten tab yang dipilih
-        document.getElementById(jenjang).classList.remove('hidden');
-
-        // Hapus kelas aktif dari semua tombol
-        document.querySelectorAll('.tab-btn').forEach(btn => {
-            btn.classList.remove('bg-green-600', 'text-white');
-            btn.classList.add('text-gray-600');
-        });
-
-        // Tambahkan kelas aktif ke tombol yang diklik
-        const activeBtn = document.querySelector(`[data-tab="${jenjang}"]`);
-        activeBtn.classList.remove('text-gray-600');
-        activeBtn.classList.add('bg-green-600', 'text-white');
-    }
-
-</script>
     </body>
 </html>
