--- a/informasi.html
+++ b/informasi.html
@@ -126,7 +126,7 @@
                     <div class="flex flex-col space-y-4 px-2 sm:px-0">
                         
                         <!-- Artikel 1 -->
-                        <a href="/artikel/penghargaan-siswa" 
+                        <a href="artikel.html" 
                         class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                         <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -139,7 +139,7 @@
                             <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Penghargaan Terbaik diraih oleh Siswa</h3>
                             <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
                             <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
-                            Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
+                                Kabar membanggakan kembali datang dari dunia pendidikan. Kali ini, prestasi gemilang berhasil ditorehkan oleh siswa SMPIT Ibnul Qayyim dalam ajang Olimpiade Sains Nasional. Berkat dedikasi dan kerja keras yang tak kenal lelah, penghargaan kategori Terbaik berhasil dibawa pulang, mengharumkan nama sekolah sekaligus menjadi inspirasi bagi generasi muda lainnya.
                             </p>
                         </div>
                         </a>
@@ -158,7 +158,7 @@
                             <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Kegiatan Outing di Gowa</h3>
                             <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
                             <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
-                            Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
+                                Suasana segar pegunungan dan hamparan hijau Kabupaten Gowa menjadi saksi keceriaan para siswa SMPIT Ibnul Qayyim dalam kegiatan outing class tahun ini. Jauh dari hiruk-pikuk ruang kelas dan tumpukan buku, para siswa diajak untuk belajar langsung dari alam, mempererat ukhuwah, serta tadabbur alam di salah satu destinasi ikonik Sulawesi Selatan.
                             </p>
                         </div>
                         </a>
@@ -177,7 +177,7 @@
                             <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Upacara Bendera Merah Putih 17 Agustus 2025</h3>
                             <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
                             <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
-                            Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital ...
+                                Di bawah langit cerah yang menaungi lapangan sekolah, keluarga besar Sekolah Ibnul Qayyim berkumpul dengan satu tujuan: memperingati Hari Kemerdekaan Republik Indonesia yang ke-81. Dengan seragam putih bersih dan barisan yang rapi, para siswa, guru, dan staf mengikuti upacara pengibaran bendera Merah Putih dengan penuh kekhusyukan.
                             </p>
                         </div>
                         </a>
@@ -192,10 +192,10 @@
                         </div>
 
                         <div class="p-4 flex flex-col justify-center flex-grow">
-                            <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Penghargaan Terbaik diraih oleh Siswa</h3>
+                            <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">LDKS: Melatih Jiwa Kepemimpinan Siswa di Tengah Tantangan Zaman</h3>
                             <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
                             <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
-                            Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
+                                Latihan Dasar Kepemimpinan Siswa (LDKS) kembali digelar untuk menyaring calon-calon pemimpin masa depan. Melalui simulasi organisasi, problem solving, dan pelatihan kedisiplinan, siswa SMPIT Ibnul Qayyim belajar bahwa menjadi pemimpin bukan tentang jabatan, melainkan tentang pengabdian dan tanggung jawab. Kegiatan ini menjadi kawah candradimuka bagi pengurus OSIS baru untuk siap menghadapi dinamika organisasi sekolah.
                             </p>
                         </div>
                         </a>
@@ -210,10 +210,10 @@
                         </div>
 
                         <div class="p-4 flex flex-col justify-center flex-grow">
-                            <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Kegiatan Outing di Gowa</h3>
+                            <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Kegiatan Market Day OSIS SMKIT Ibnul Qayyim</h3>
                             <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
                             <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
-                            Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
+                                Halaman SMKIT Ibnul Qayyim mendadak berubah menjadi pasar kreatif yang penuh warna. Aroma masakan yang menggugah selera dan riuh rendah suara siswa yang menjajakan dagangannya menandai dibukanya gelaran Market Day. Kegiatan tahunan ini bukan sekadar ajang jual beli, melainkan simulasi nyata bagi para siswa untuk menyelami dunia kewirausahaan sejak dini.
                             </p>
                         </div>
                         </a>
