--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="flex flex-col space-y-4 px-2 sm:px-0">
             
             <!-- Artikel 1 -->
-            <a href="/artikel/penghargaan-siswa" 
+            <a href="artikel.html" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
               <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -257,7 +257,7 @@
             </a>
 
             <!-- Artikel 2 -->
-            <a href="/artikel/kegiatan-outing-gowa" 
+            <a href="artikel.html" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
               <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -276,7 +276,7 @@
             </a>
 
             <!-- Artikel 3 -->
-            <a href="/artikel/upacara-bendera-2025" 
+            <a href="artikel.html" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
               <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
