--- a/informasi.html
+++ b/informasi.html
@@ -145,7 +145,7 @@
                         </a>
 
                         <!-- Artikel 2 -->
-                        <a href="/artikel/kegiatan-outing-gowa" 
+                        <a href="artikel.html" 
                         class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                         <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -164,7 +164,7 @@
                         </a>
 
                         <!-- Artikel 3 -->
-                        <a href="/artikel/upacara-bendera-2025" 
+                        <a href="artikel.html" 
                         class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                         <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -182,7 +182,7 @@
                         </div>
                         </a>
 
-                        <a href="/artikel/penghargaan-siswa" 
+                        <a href="artikel.html" 
                         class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                         <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
@@ -200,7 +200,7 @@
                         </div>
                         </a>
 
-                        <a href="/artikel/kegiatan-outing-gowa" 
+                        <a href="artikel.html" 
                         class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                         <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
