--- a/artikel.html
+++ b/artikel.html
@@ -129,7 +129,7 @@
                     </div>
                     </a>
 
-                    <a href="/artikel/kegiatan-outing-gowa" class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
+                    <a href="artikel.html" class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
                     <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
                         <img src="img/iqis4.jpg"
