update: section facility

--- a/program.html
+++ b/program.html
@@ -24,8 +24,16 @@
         </style>
     </head>
     <body class="bg-[#F2F2F2] m-0 p-0">
+        <!-- Navbar -->
+        <header class="fixed top-0 w-full z-50 bg-gradient-to-r from-green-600 to-green-800 pt-2 pb-2">
+            <div class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14">
+            <div class="flex items-center space-x-2">
+                <img alt="yayasan" class="h-12" src="img/yayasaniqis.png" />
+            </div>
+            </div>
+        </header>
         <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
-    <section>
+    <section class="mt-16">
         <div class="max-w-4xl mx-auto">
             <div class="text-center mb-6">
                 <h2 class="text-2xl font-bold text-gray-800">
