--- a/profil.html
+++ b/profil.html
@@ -14,9 +14,17 @@
         </style>
     </head>
     <body class="bg-[#F2F2F2] m-0 p-0">
+        <!-- Navbar -->
+        <header class="fixed top-0 w-full z-50 bg-gradient-to-r from-green-600 to-green-800 pt-2 pb-2">
+            <div class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14">
+            <div class="flex items-center space-x-2">
+                <img alt="yayasan" class="h-12" src="img/yayasaniqis.png" />
+            </div>
+            </div>
+        </header>
         <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
         <!-- Pengenalan Sekolah -->
-        <section>
+        <section class="mt-16">
             <h2 class="text-2xl font-bold mb-6 text-center">Tentang <span class="bg-gradient-to-r from-green-600 to-green-800 bg-clip-text text-transparent">Kami</span></h2>
             <p class="text-gray-700 leading-relaxed text-justify text-sm">
                 Ibnul Qayyim Islamic School - IQIS adalah Sekolah Islam yang diselenggarakan dengan memadukan secara Integratif nilai dan ajaran Islam dalam bangunan kurikulum dengan pendekatan pembelajaran yang efektif dan pelibatan yang optimal dan koperatif antara guru dan orangtua, serta masyarakat untuk membina karakter dan kompetensi peserta didik. Berbekal niat yang ikhlas untuk memperbaiki generasi muda kaum muslimin di masa yang akan datang. Maka didirikanlah Ibnul Qayyim Islamic School pada tahun 2011 (SDIT) dengan mengusung konsep sekolah yang memiliki keunggulan pada ilmu keislaman ditambah tahfidzul qur'an dan bahasa asing (Arab & inggris) dengan tetap mengacu pada kurikulum yang di tetapkan pemerintah.
@@ -521,7 +529,7 @@
                             <div class="mb-12">
                                 <div class="flex items-start space-x-4">
                                     <div class="flex-shrink-0">
-                                        <div class="w-14 h-14 bg- -100 rounded-full flex items-center justify-center">
+                                        <div class="w-14 h-14 bg-gray-100 rounded-full flex items-center justify-center">
                                             <i class="fas fa-bullseye text-[24px] text-gray-600"></i>
                                         </div>
                                     </div>
