--- a/index.html
+++ b/index.html
@@ -40,30 +40,112 @@
           <div class="swiper-wrapper items-stretch">
 
           <div class="swiper-slide h-auto overflow-visible">
-            <img src="img/iqis2.jpg" alt="Pengumuman Libur"
-              class="w-full h-60 object-cover rounded-lg">
+            <!-- Image Wrapper -->
+            <div class="relative w-full h-60 rounded-lg overflow-hidden">
+              <img src="img/iqis4.jpg" alt="Pengumuman Libur"
+                class="w-full h-full object-cover">
+
+              <!-- Gradient Overlay -->
+              <div class="absolute inset-0 bg-gradient-to-r from-black/70 via-black/40 to-transparent"></div>
+
+              <!-- Text Content -->
+              <div class="absolute inset-0 flex items-center">
+                <div class="px-8">
+                  <h2 class="text-gray-200 text-2xl sm:text-2xl md:text-3xl font-bold leading-tight">
+                    Penerimaan Peserta <br> Didik Baru <span class="text-pink-600 font-bold">TKIT</span>
+                  </h2>
+
+                  <p class="mt-2 max-w-sm text-sm sm:text-base text-white/80">
+                    Tahun Ajaran 2025 / 2026
+                  </p>
+                </div>
+              </div>
+
+            </div>
 
             <div class="flex flex-col sm:flex-row gap-4 mt-4">
-              <a href="https://drive.google.com/file/d/1aW4Hxj-iBzGF634k-AFOJQr-OPLNzUV1/view" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md hover:bg-green-100">
+              <a href="https://drive.google.com/drive/folders/1EVq8V0csn_Nty8_J9KwKwVdSzjgw65ab"
+                target="_blank"
+                class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md hover:bg-green-100">
                 Lihat Brosur
               </a>
 
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQj02imN70ePKLFWvLrPZQiC2GJ2Vi5dZW7FV8o2Hyj549Qg/viewform" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_rMTx1hamWngP1GBj4y0HF75p4wdrl3BjexOXgkW1ihJiew/closedform"
+                target="_blank"
+                class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700">
                 Daftar Sekarang
               </a>
             </div>
           </div>
 
           <div class="swiper-slide h-auto overflow-visible">
-            <img src="img/iqis3.jpg" alt="Pengumuman Libur"
-              class="w-full h-60 object-cover rounded-lg">
+            <!-- Image Wrapper -->
+            <div class="relative w-full h-60 rounded-lg overflow-hidden">
+              <img src="img/iqis2.jpg" alt="Pengumuman Libur"
+                class="w-full h-full object-cover">
+
+              <!-- Gradient Overlay -->
+              <div class="absolute inset-0 bg-gradient-to-r from-black/70 via-black/40 to-transparent"></div>
+
+              <!-- Text Content -->
+              <div class="absolute inset-0 flex items-center">
+                <div class="px-8">
+                  <h2 class="text-gray-200 text-xl sm:text-2xl md:text-3xl font-bold leading-tight">
+                    Penerimaan Peserta <br> Didik Baru <span class="text-red-600 font-extrabold">SDIT</span>
+                  </h2>
+
+                  <p class="mt-2 max-w-sm text-sm sm:text-base text-white/80">
+                    Tahun Ajaran 2025 / 2026
+                  </p>
+                </div>
+              </div>
+
+            </div>
 
             <div class="flex flex-col sm:flex-row gap-4 mt-4">
-              <a href="https://drive.google.com/file/d/1aW4Hxj-iBzGF634k-AFOJQr-OPLNzUV1/view" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md hover:bg-green-100">
+              <a href="https://drive.google.com/file/d/1aW4Hxj-iBzGF634k-AFOJQr-OPLNzUV1/view"
+                target="_blank"
+                class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md hover:bg-green-100">
                 Lihat Brosur
               </a>
 
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQj02imN70ePKLFWvLrPZQiC2GJ2Vi5dZW7FV8o2Hyj549Qg/viewform" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQj02imN70ePKLFWvLrPZQiC2GJ2Vi5dZW7FV8o2Hyj549Qg/viewform"
+                target="_blank"
+                class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700">
+                Daftar Sekarang
+              </a>
+            </div>
+          </div>
+
+          <div class="swiper-slide h-auto overflow-visible">
+            <!-- Image Wrapper -->
+            <div class="relative w-full h-60 rounded-lg overflow-hidden">
+              <img src="img/iqis3.jpg" alt="Pengumuman Libur"
+                class="w-full h-full object-cover">
+
+              <!-- Gradient Overlay -->
+              <div class="absolute inset-0 bg-gradient-to-r from-black/70 via-black/40 to-transparent"></div>
+
+              <!-- Text Content -->
+              <div class="absolute inset-0 flex items-center ">
+                <div class="px-8">
+                  <h2 class="text-gray-200 text-xl sm:text-2xl md:text-3xl font-bold leading-tight">
+                    Penerimaan Peserta <br> Didik Baru <span class="text-blue-600 font-extrabold">SMPIT</span>
+                  </h2>
+
+                  <p class="text-white/80 text-sm sm:text-base mt-2 max-w-sm">
+                    Tahun Ajaran 2025 / 2026
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex flex-col sm:flex-row gap-4 mt-4">
+              <a href="https://drive.google.com/file/d/1NQxXPNyAOEIHpRWA65TjGqzvmqGGa9Of/view" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-white/80 backdrop-blur-sm border border-green-700 text-green-700 font-semibold rounded-lg shadow-md hover:bg-green-100">
+                Lihat Brosur
+              </a>
+
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSe5D6IKTm6qXkcxOyzPaBmuduQATSZpDyR3hzWH0a_E8alvbA/viewform" target="_blank" class="text-sm flex-1 text-center px-6 py-3 bg-green-600 text-white font-semibold rounded-lg shadow-md hover:bg-green-700">
                 Daftar Sekarang
               </a>
             </div>
