--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <!-- Text Content -->
               <div class="absolute inset-0 flex items-center">
                 <div class="px-8">
-                  <h2 class="text-gray-200 text-2xl sm:text-2xl md:text-3xl font-bold leading-tight">
+                  <h2 class="text-gray-200 text-xl sm:text-2xl md:text-3xl font-bold leading-tight">
                     Penerimaan Peserta <br> Didik Baru <span class="text-pink-600 font-bold">TKIT</span>
                   </h2>
 
