--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="swiper carousel-swiper h-auto">
           <div class="swiper-wrapper items-stretch">
 
-          <div class="swiper-slide h-auto overflow-visible">
+          <div class="swiper-slide h-auto overflow-visible pb-2">
             <!-- Image Wrapper -->
             <div class="relative w-full h-60 rounded-lg overflow-hidden">
               <img src="img/iqis2.jpg" alt="Pengumuman Libur"
@@ -78,7 +78,7 @@
             </div>
           </div>
 
-          <div class="swiper-slide h-auto overflow-visible">
+          <div class="swiper-slide h-auto overflow-visible pb-2">
             <!-- Image Wrapper -->
             <div class="relative w-full h-60 rounded-lg overflow-hidden">
               <img src="img/iqis3.jpg" alt="Pengumuman Libur"
@@ -370,7 +370,7 @@
                       </div>
                     </div>
 
-                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px] text-justify">
+                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px]">
                       SDIT Ibnul Qayyim memberikan pendidikan yang sangat baik, memadukan akademik dan nilai - nilai Islam. Ustadz dan Ustadzah yang profesional, ramah, dan penuh perhatian membuat anak saya nyaman dan termotivasi belajar. Lingkungan sekolah yang aman dan menyenangkan turut membentuk karakter anak menjadi lebih percaya diri, disiplin, serta berakhlak mulia. Saya sangat bersyukur dan puas dengan kualitas pendidikan di SDIT Ibnul Qayyim.
                     </div>
                   </div>
@@ -386,7 +386,7 @@
                       </div>
                     </div>
 
-                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px] text-justify">
+                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px]">
                       Anak saya bersekolah di TKIT Ibnul Qayyim selama 2 tahun. Sebelumnya, anak saya memiliki kondisi Speach delay dan Hiperaktif. Alhamdulillahnya TKIT Ibnul Qayyim dapat menerima anak dengan kondisi tersebut. TKIT Ibnul Qayyim sangat memperhatikan tumbuh kembang dalam pembelajaran kepada setiap anak didiknya. Anak saya yang awalnya tidak bisa diam berlama lama dalam satu tempat, sekarang sudah bisa duduk tenang dan mendengarkan pelajaran dari ustadz/ustadzahnya. Ananda yang sebelumnya mempunyai keterbatasan dalam kosa kata dan artikulasi yang tidak terlalu jelas, sekarang sudah bisa membaca latin, membaca Iqro, dan menghafal beberapa surah pendek serta hadits. Menurut saya sebagai orang tua, itu pencapaian luar biasa untuk ananda, mengingat ananda memiliki kondisi tersebut dan itu mengikis rasa kekhawatiran saya.
                     </div>
                   </div>
@@ -402,7 +402,7 @@
                       </div>
                     </div>
 
-                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px] text-justify">
+                    <div class="mt-2 p-4 rounded-lg text-gray-600 text-[14px]">
                       Ini menjadi salah satu experience yang terbarukan kepada anak-anak kita yang ada di sulawesi selatan ini, karna tidak semua sekolah bisa menghadirkan jurusan RPL dengan memperhatikan hafalan Al-Qurannya.
                     </div>
                   </div>
