--- a/profil.html
+++ b/profil.html
@@ -11,6 +11,13 @@
             body {
                 font-family: "Inter", sans-serif;
             }
+            .slider-container {
+                -ms-overflow-style: none; /* IE & Edge */
+                scrollbar-width: none; /* Firefox */
+            }
+            .slider-container::-webkit-scrollbar {
+                display: none; /* Chrome, Safari, Opera */
+            }
         </style>
     </head>
     <body class="bg-[#F2F2F2] m-0 p-0">
@@ -597,8 +604,8 @@
                         </div>
                     </div>
 
-                    <!-- Prestasi dan Akreditasi SMKIT -->
-                    <div class="bg-white p-8 rounded-xl shadow-md">
+                    <!-- Serapan Lulusan SMKIT -->
+                    <div class="bg-white p-8 rounded-xl shadow-md mb-8">
                         <h2 class="text-xl font-semibold mb-8 text-gray-800"><i class="fas fa-award mr-4 text-indigo-500"></i>Akreditasi</h2>
                         
                         <!-- Akreditasi -->
@@ -641,6 +648,133 @@
                                         <h4 class="font-semibold text-sm mb-1">Sertifikasi Industri Teknologi Informasi</h4>
                                         <p class="text-xs text-gray-600">Pengakuan kompetensi siswa</p>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-8 rounded-xl shadow-md">
+                        <h2 class="text-xl font-semibold mb-8 text-gray-800">
+                            <i class="fas fa-graduation-cap mr-4 text-green-500"></i>
+                            Serapan Lulusan
+                        </h2>
+
+                        <div class="overflow-x-auto slider-container">
+                            <div class="flex items-center space-x-14 py-4 px-2 w-max mb-10">
+
+                                <!-- Logo Item -->
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/unhas.png" alt="Universitas Hasanuddin" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UNM.png" alt="Universitas Negeri Malang" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/Telkom U.webp" alt="Universitas Telkom" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/undipa.png" alt="Universitas Dipanegara" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UC.png" alt="Universitas Ciputera" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/telkom purwo.jpg" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/Muhammadiyah.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UMII.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/poltekpar.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/ALI.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/poli bosowa.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/media kreatif.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/sadita.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+                            </div>
+
+                        <h2 class="text-xl font-semibold mb-8 text-gray-800">
+                            <i class="fas fa-handshake mr-4 text-lime-500"></i>
+                            Mitra PKL
+                        </h2>
+
+                        <div class="overflow-x-auto slider-container">
+                            <div class="flex items-center space-x-14 py-4 px-2 w-max">
+
+                                <!-- Logo Item -->
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/unhas.png" alt="Universitas Hasanuddin" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UNM.png" alt="Universitas Negeri Malang" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/Telkom U.webp" alt="Universitas Telkom" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/undipa.png" alt="Universitas Dipanegara" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UC.png" alt="Universitas Ciputera" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/telkom purwo.jpg" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/Muhammadiyah.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/UMII.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/poltekpar.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/ALI.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/poli bosowa.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/media kreatif.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/sadita.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
                                 </div>
                             </div>
                         </div>
